[gd_scene load_steps=10 format=3 uid="uid://wn7300ox6nll"]

[ext_resource type="Script" path="res://scanner/scanner.gd" id="1_vv4rg"]
[ext_resource type="PackedScene" uid="uid://c80lgts35xsrt" path="res://scanner/scanner_ui.tscn" id="2_kaamb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i5iv6"]
size = Vector3(1, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bo4ai"]
size = Vector3(1, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_33t8x"]
size = Vector3(0.820006, 0.704278, 0.806946)

[sub_resource type="ViewportTexture" id="ViewportTexture_xx3pi"]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id="Animation_v5lxb"]
resource_name = "scan_light"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScanLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_n0j4e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScanLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25b3o"]
_data = {
"RESET": SubResource("Animation_n0j4e"),
"scan_light": SubResource("Animation_v5lxb")
}

[node name="Scanner" type="Node3D"]
script = ExtResource("1_vv4rg")

[node name="Base" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101417, 0)
shape = SubResource("BoxShape3D_i5iv6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0998402, 0)
mesh = SubResource("BoxMesh_bo4ai")

[node name="ScanArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScanArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55069, 0)
shape = SubResource("BoxShape3D_33t8x")

[node name="Screen" type="Sprite3D" parent="."]
transform = Transform3D(-8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, -0.484494, 1.76096, 0)
texture = SubResource("ViewportTexture_xx3pi")

[node name="ScanLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0206401, 0.241999, 0)
visible = false
light_color = Color(1, 0, 0.0901961, 1)
light_energy = 3.0
omni_range = 0.650911

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_25b3o")
}

[node name="Viewport" type="SubViewport" parent="."]

[node name="ScannerUI" parent="Viewport" instance=ExtResource("2_kaamb")]

[connection signal="body_entered" from="ScanArea" to="." method="_on_scan_area_body_entered"]
[connection signal="body_exited" from="ScanArea" to="." method="_on_scan_area_body_exited"]
